实现指定圈子的帖子查看

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -31,8 +31,7 @@
                     android:layout_height="@dimen/dp_50"
                     android:layout_centerVertical="true"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/dp_16"
-                    android:paddingRight="@dimen/dp_10"
+                    android:padding="@dimen/dp_16"
                     android:text="@string/header"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sp_16" />
@@ -42,10 +41,9 @@
                     android:layout_width="@dimen/dp_70"
                     android:layout_height="@dimen/dp_70"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center"
-                    android:layout_marginRight="@dimen/dp_20"
+                    android:layout_marginEnd="@dimen/dp_20"
                     android:src="@mipmap/header" />
 
                 <ImageView
@@ -53,7 +51,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:src="@mipmap/icon_right" />
             </RelativeLayout>
@@ -62,7 +59,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="1.0dip"
                 android:layout_marginStart="@dimen/dp_12"
-                android:layout_marginLeft="@dimen/dp_12"
                 android:background="@color/black2" />
 
             <RelativeLayout
@@ -77,8 +73,7 @@
                     android:layout_height="@dimen/dp_50"
                     android:layout_centerVertical="true"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/dp_16"
-                    android:paddingRight="@dimen/dp_10"
+                    android:padding="@dimen/dp_16"
                     android:text="@string/nicky_title"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sp_16" />
@@ -88,13 +83,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/dp_50"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/dp_20"
+                    android:layout_marginEnd="@dimen/dp_20"
                     android:background="@drawable/setting_item_selector"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/dp_16"
-                    android:paddingRight="@dimen/dp_10"
+                    android:padding="@dimen/dp_16"
                     android:text="@string/nick_name"
                     android:textSize="@dimen/sp_16" />
 
@@ -103,7 +96,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:src="@mipmap/icon_right" />
             </RelativeLayout>
@@ -126,8 +118,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/setting_item_selector"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/dp_16"
-                    android:paddingRight="@dimen/dp_10"
+                    android:padding="@dimen/dp_10"
                     android:text="@string/class_title"
                     android:textSize="@dimen/sp_16" />
 
@@ -136,13 +127,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/dp_50"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/dp_20"
+                    android:layout_marginEnd="@dimen/dp_20"
                     android:background="@drawable/setting_item_selector"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/dp_16"
-                    android:paddingRight="@dimen/dp_10"
+                    android:paddingLeft="@dimen/dp_10"
                     android:text="@string/class_content"
                     android:textSize="@dimen/sp_16" />
 
@@ -151,7 +140,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:src="@mipmap/icon_right" />
             </RelativeLayout>
@@ -175,8 +163,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/setting_item_selector"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/dp_16"
-                    android:paddingRight="@dimen/dp_10"
+                    android:padding="@dimen/dp_10"
                     android:text="@string/level_title"
                     android:textSize="@dimen/sp_16" />
 
@@ -185,14 +172,12 @@
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/dp_50"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
 
-                    android:layout_marginRight="@dimen/dp_20"
+                    android:layout_marginEnd="@dimen/dp_20"
                     android:background="@drawable/setting_item_selector"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/dp_16"
-                    android:paddingRight="@dimen/dp_10"
+                    android:padding="@dimen/dp_10"
                     android:text="@string/user_level"
                     android:textSize="@dimen/sp_16" />
 
@@ -201,7 +186,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:src="@mipmap/icon_right" />
             </RelativeLayout>
@@ -224,8 +208,7 @@
                     android:layout_centerVertical="true"
                     android:background="@drawable/setting_item_selector"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/dp_16"
-                    android:paddingRight="@dimen/dp_10"
+                    android:padding="@dimen/dp_10"
                     android:text="@string/more"
                     android:textSize="@dimen/sp_16" />
 
@@ -234,7 +217,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
                     android:src="@mipmap/icon_right" />
             </RelativeLayout>
