--- a/app/src/main/res/layout/activity_edit_userinfo.xml
+++ b/app/src/main/res/layout/activity_edit_userinfo.xml
@@ -39,9 +39,9 @@
         android:id="@+id/edit_name"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/edittext_login"
         android:gravity="center"
         android:hint="请输入您的昵称"
@@ -54,9 +54,9 @@
         android:id="@+id/btn_start"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp"
         android:layout_marginTop="40dp"
-        android:layout_marginRight="12dp"
+        android:layout_marginEnd="12dp"
         android:background="@drawable/btn_bg_blue"
         android:paddingTop="7dp"
         android:paddingBottom="7dp"
