--- a/app/src/main/res/layout/activity_forum_comment.xml
+++ b/app/src/main/res/layout/activity_forum_comment.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                app:contentScrim="#212121"
+                app:contentScrim="@color/blue_200"
                 app:expandedTitleMarginEnd="64dp"
                 app:expandedTitleMarginStart="48dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
@@ -73,7 +73,7 @@
                             android:id="@+id/detail_page_userLogo"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
-                            android:layout_marginLeft="16dp"
+                            android:layout_marginStart="16dp"
                             android:src="@mipmap/header"
                             app:civ_border_color="@android:color/white"
                             app:civ_border_width="1dp" />
@@ -81,7 +81,7 @@
                         <LinearLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="6dp"
+                            android:layout_marginStart="6dp"
                             android:layout_weight="1"
                             android:orientation="vertical">
 
@@ -116,8 +116,8 @@
                         android:id="@+id/detail_page_story"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="18dp"
-                        android:layout_marginRight="10dp"
+                        android:layout_marginStart="18dp"
+                        android:layout_marginEnd="10dp"
                         android:ellipsize="end"
                         android:maxLines="10"
                         android:text="水光潋滟晴方好，山色空蒙雨亦奇。\n欲把西湖比西子，淡抹浓妆总相宜。"
@@ -127,9 +127,9 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="0.5dp"
-                        android:layout_marginLeft="16dp"
+                        android:layout_marginStart="16dp"
                         android:layout_marginTop="20dp"
-                        android:layout_marginRight="16dp"
+                        android:layout_marginEnd="16dp"
                         android:background="#e6e6e6" />
                 </LinearLayout>
 
@@ -169,8 +169,8 @@
             android:id="@+id/detail_page_do_comment"
             android:layout_width="0dp"
             android:layout_height="34dp"
-            android:layout_marginLeft="12dp"
-            android:layout_marginRight="22dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="22dp"
             android:layout_weight="1"
             android:background="@drawable/comment_btn_selected"
             android:gravity="center_vertical"
@@ -187,7 +187,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
             android:text="32"
             android:textColor="#9A9A9A"
             android:textSize="14sp" />
@@ -195,14 +195,14 @@
         <ImageView
             android:layout_width="22dp"
             android:layout_height="22dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:src="@mipmap/ic_favour" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="14dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="14dp"
             android:text="66"
             android:textColor="#9A9A9A"
             android:textSize="14sp" />
