--- a/app/src/main/res/layout/comment_item_layout.xml
+++ b/app/src/main/res/layout/comment_item_layout.xml
@@ -15,13 +15,13 @@
             android:layout_width="28dp"
             android:layout_height="28dp"
             android:src="@mipmap/header"
-            android:layout_marginLeft="14dp"
-            android:layout_marginRight="6dp"/>
+            android:layout_marginStart="14dp"
+            android:layout_marginEnd="6dp"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:layout_marginLeft="6dp"
+            android:layout_marginStart="6dp"
             android:orientation="vertical">
             <TextView
                 android:id="@+id/comment_item_userName"
@@ -56,8 +56,8 @@
         android:layout_marginTop="6dp"
         android:textColor="#484848"
         android:textSize="14sp"
-        android:layout_marginLeft="52dp"
-        android:layout_marginRight="24dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="24dp"
         android:text="从前有座山，山里有座庙，庙里有个老和尚"/>
 
 
