--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -30,7 +30,7 @@
             android:id="@+id/user_info_userLogo"
             android:layout_width="@dimen/dp_48"
             android:layout_height="@dimen/dp_48"
-            android:layout_marginLeft="@dimen/dp_36"
+            android:layout_marginStart="@dimen/dp_36"
             android:layout_marginTop="@dimen/dp_50"
             android:src="@mipmap/header"
             app:civ_border_color="@android:color/white"
@@ -42,7 +42,7 @@
             android:id="@+id/user_info_userName"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dp_30"
-            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_marginStart="@dimen/dp_24"
             android:layout_marginTop="@dimen/dp_50"
             android:text="@string/nick_name"
             android:textColor="@color/white"
@@ -55,7 +55,7 @@
             android:id="@+id/user_info_time"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/dp_26"
-            android:layout_marginLeft="@dimen/dp_24"
+            android:layout_marginStart="@dimen/dp_24"
             android:layout_marginTop="@dimen/dp_2"
             android:text="@string/unknown"
             android:textColor="@color/white"
@@ -67,7 +67,7 @@
             android:id="@+id/user_info_story"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_36"
+            android:layout_marginStart="@dimen/dp_36"
             android:maxLines="10"
             android:padding="@dimen/dp_5"
             android:text="@string/signature"
