--- a/app/src/main/res/layout/activity_fitness_chart_data.xml
+++ b/app/src/main/res/layout/activity_fitness_chart_data.xml
@@ -28,7 +28,7 @@
                     android:id="@+id/chart_new_3"
                     android:layout_width="match_parent"
                     android:layout_height="280dp"
-                    android:layout_marginLeft="@dimen/dp_10" />
+                    android:layout_marginStart="@dimen/dp_10" />
             </LinearLayout>
         </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
