--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="@dimen/dp_15"
+                    android:layout_marginEnd="@dimen/dp_15"
                     android:src="@mipmap/icon_right"
                     android:clickable="true"/>
 
@@ -65,7 +65,7 @@
                     android:id="@+id/iv_sex"
                     android:layout_width="wrap_content"
                     android:layout_height="@dimen/dp_20"
-                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_marginStart="@dimen/dp_10"
                     android:layout_marginTop="@dimen/dp_22"
                     android:text="@string/user_level"
                     android:layout_toRightOf="@+id/tvname"
