--- a/app/src/main/res/layout/header_item_custom.xml
+++ b/app/src/main/res/layout/header_item_custom.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="12dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginTop="5dp"
         android:background="@drawable/select_gank_custom"
         android:gravity="center"
