--- a/app/src/main/res/layout/layout_one_line.xml
+++ b/app/src/main/res/layout/layout_one_line.xml
@@ -33,7 +33,7 @@
             android:id="@+id/tv_text_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"
             android:layout_weight="1"
             android:textSize="14sp" />
 
