--- a/recycler/src/main/res/layout/brvah_quick_view_load_more.xml
+++ b/recycler/src/main/res/layout/brvah_quick_view_load_more.xml
@@ -16,13 +16,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="?android:attr/progressBarStyleSmall"
-            android:layout_marginRight="@dimen/dp_4"/>
+            android:layout_marginEnd="@dimen/dp_4"/>
 
         <TextView
             android:id="@+id/loading_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/dp_4"
+            android:layout_marginStart="@dimen/dp_4"
             android:text="@string/brvah_loading"
             android:textColor="@android:color/black"
             android:textSize="@dimen/sp_14"/>
