--- a/recycler/src/main/res/layout/def_section_head.xml
+++ b/recycler/src/main/res/layout/def_section_head.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="60dip"
     android:layout_gravity="center"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardBackgroundColor="@android:color/white"
     card_view:cardCornerRadius="4dp"
