--- a/recycler/src/main/res/layout/layout_animation.xml
+++ b/recycler/src/main/res/layout/layout_animation.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
+    android:layout_marginStart="5dp"
+    android:layout_marginEnd="5dp"
     android:foreground="?android:attr/selectableItemBackground"
     card_view:cardBackgroundColor="@color/item_bg"
     card_view:cardCornerRadius="4dp"
