--- a/app/src/main/res/layout/activity_fitness_chart_data.xml
+++ b/app/src/main/res/layout/activity_fitness_chart_data.xml
@@ -1,34 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-        <ScrollView
+    <include layout="@layout/layout_custom_toolbar" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical">
+            android:orientation="vertical">
 
-            <LinearLayout
+            <com.display.chartwidgetdemo.widget.PieChart
+                android:layout_margin="@dimen/dp_10"
+                android:id="@+id/pie_chart"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
+                android:layout_height="@dimen/dp_300" />
 
-                <com.display.chartwidgetdemo.widget.HollowPieChart
-                    android:id="@+id/chart"
-                    android:layout_width="match_parent"
-                    android:layout_height="280dp" />
+            <TextView
+                android:layout_margin="@dimen/dp_10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="运动时长占比图" />
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:text="占比图" />
+            <com.display.chartwidgetdemo.widget.BarAndChartTest
+                android:layout_margin="@dimen/dp_10"
+                android:id="@+id/chart_new_3"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_300"
+                android:layout_marginStart="@dimen/dp_10" />
 
-                <com.display.chartwidgetdemo.widget.BarAndChartTest
-                    android:id="@+id/chart_new_3"
-                    android:layout_width="match_parent"
-                    android:layout_height="280dp"
-                    android:layout_marginStart="@dimen/dp_10" />
-            </LinearLayout>
-        </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="@dimen/dp_10"
+                android:padding="@dimen/dp_5"
+                android:text="每日运动数据" />
+
+            <com.display.chartwidgetdemo.widget.LineChartNew
+                android:id="@+id/chart_line"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_300"
+                android:layout_margin="@dimen/dp_10"
+                android:padding="@dimen/dp_5" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_margin="@dimen/dp_10"
+                android:padding="@dimen/dp_5"
+                android:text="运动排名" />
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
