--- a/app/src/main/res/layout/layout_user_info.xml
+++ b/app/src/main/res/layout/layout_user_info.xml
@@ -2,14 +2,17 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout
+        android:layout_margin="@dimen/dp_10"
+        android:padding="@dimen/dp_5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_centerVertical="true"
             android:id="@+id/user_info_header"
-            android:layout_width="@dimen/dp_60"
-            android:layout_height="@dimen/dp_60"
+            android:layout_width="@dimen/dp_32"
+            android:layout_height="@dimen/dp_32"
             android:layout_marginHorizontal="@dimen/dp_10"
             android:src="@mipmap/header" />
 
