--- a/chartwidget/src/main/res/values/colors.xml
+++ b/chartwidget/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="axis">#979797</color>
+    <color name="gray">#7A7979</color>
 </resources>
